[package]
name = "warrior-util"
version = "0.0.1"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"

[[example]]
name = "multithreaded"
path = "examples/nonce_cache/multithreaded.rs"

[[example]]
name = "hosts_example"
path = "examples/hosts_database/hosts_example.rs"

[[example]]
name = "json_basic"
path = "examples/json/serde_basic.rs"

[[example]]
name = "cli"
path = "examples/cli/cli.rs"

[[example]]
name = "base64"
path = "examples/base64/base64.rs"