[package]
name = "warrior-util"
version = "0.0.1"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"

# turn off clippy lint, I find it more readable/safe with field names in structs
[lints.clippy]
redundant_field_names = "allow"
#call me old fashioned i like using mod 
manual_is_multiple_of = "allow" 
# Still getting used to rust sometimes returns feel more nature, may remove this later
needless_return = "allow"

# examples 
[[example]]
name = "multithreaded"
path = "examples/nonce_cache/multithreaded.rs"

[[example]]
name = "hosts_example"
path = "examples/hosts_database/hosts_example.rs"

[[example]]
name = "json_basic"
path = "examples/json/serde_basic.rs"

[[example]]
name = "cli"
path = "examples/cli/cli.rs"

[[example]]
name = "base64"
path = "examples/base64/base64.rs"

[[example]]
name = "skip_list"
path = "examples/collections/skip_list.rs"
